# scrambify

./: .gitignore  README.md  pyproject.toml  sample-transfer.txt  scrambify.spec
.github/workflows/: auto-tag.yml  release.yml
docs/: architecture.md
installs/: install.ps1  install.sh
src/scrambify/: __main__.py  application.py  cli.py  config.py
src/scrambify/domain/: __init__.py  models.py
src/scrambify/protocol/: __init__.py  mailbox.py  pake.py  relay.py  transfer.py
src/scrambify/services/: __init__.py  codes.py  session.py
src/scrambify/tests/: test_cli.py  test_cli_end_to_end.py  test_config.py  test_file_transfer.py  test_relay.py
